# cdk_cf_execution_role

./: .gitignore  README.md  pyproject.toml
scripts/: setup_dev_env.sh
src/: app.py  generate_cf_execution_policy.py
src/stacks/: mix_of_services.py  storage.py
