[tool.poetry]
name = "cdk_cf_execution_role"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "stacks", from = "src"}]

[tool.poetry.dependencies]
python = "3.10.13"
aws-cdk-lib = "2.133.0"
pydantic = "2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
